# gym-flappy-bird

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: demo.py  new_qlearn.py  train.py  train_ucb.py
src/flappy_bird_gym/: READ.md  README.md  original_game.py
src/records/: upp_lower_pipe_sets.json
src/utils/: utils.py
